<resources>
    <string name="app_name">HospitalGuide</string>
    <string name="table">en_terveysasema</string>
    <string name="helsinki">Helsinki</string>
    <string name="vantaa">Vantaa</string>
    <string name="espoo">Espoo</string>
    <string name="kauniainen">Kauniainen</string>
    <string name="enterRegion">Select Region:</string>
    <string name="enterCity">Select City:</string>
    <string name="search">Search</string>
    <string name="newReminder">new Reminder</string>
    <string name="deleteReminder">delete Reminder</string>
    <string name="sv">sv</string>
    <string name="fi">fi</string>
    <string name="en">en</string>
    <string name="phone">"Phone: "</string>
    <string name="website">Visit Website</string>
    <string-array name="cities">
        <item>@string/helsinki</item>
        <item>@string/vantaa</item>
        <item>@string/espoo</item>
        <item>@string/kauniainen</item>
    </string-array>
    <string name="address">"Address: "</string>
    <string name="hintSearch">Search health centres</string>
    <string name="textSearchTitle">Search By Name:</string>
    <string name="spinnerSearchTitle">Search By Region:</string>
    <string name="appointments">View Reminders</string>
    <string name="health_centre">Health Centre:</string>
    <string name="date">Date:</string>
    <string name="reminder">Set Reminder</string>
    <string name="reminderToast">Reminder saved</string>
    <string name="reminderCancelledToast">Reminder cancelled</string>
    <string name="noreminders">No Reminders</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm Reminder</string>
    <string name="tvSetReminder">Your reminder:</string>
    <string name="confirmCancel">Cancel this reminder?</string>
    <string name="invalid">Invalid Date</string>
</resources>
